--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
       <h1>Guess My Number!</h1>
       <p class="between">(Between 1 and 20)</p>
-      <!-- <button class="btn again">Again!</button> -->
+      <button class="btn again">Again!</button>
       <div class="number">?</div>
     </header>
     <main>
       <section class="left">
-        <input type="number" class="guess" maxLength="20"/>
+        <input type="number" class="guess" />
         <button class="btn check">Check!</button>
       </section>
       <section class="right">
@@ -26,6 +26,13 @@
           🥇 Highscore: <span class="highscore">0</span>
         </p>
       </section>
+
+      <!-- popup windoq -->
+      <div class="modal hidden">
+        <button class="close-modal">&times;</button>
+        <h1 class="result">Masha Allah Great👏</h1>
+      </div>
+      <div class="overlay hidden"></div>
     </main>
     <script src="script.js"></script>
   </body>
