--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
       <section class="left">
         <input type="number" class="guess" />
-        <button class="btn check">Check!</button>
+        <button class="btn check save">Check!</button>
       </section>
       <section class="right">
         <p class="message">Start guessing...</p>
@@ -28,9 +28,12 @@
       </section>
 
       <!-- popup windoq -->
-      <div class="modal hidden">
-        <button class="close-modal">&times;</button>
-        <h2 class="result">Masha Allah Great👏</h2>
+      <div class="popup hidden">
+        <button class="close-window">&times;</button>
+        <h1 class="result">
+          Masha Allah Great👏 A Small Gift for you
+          <a href="img.png">Click here</a>
+        </h1>
       </div>
       <div class="overlay hidden"></div>
     </main>
