--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="popup hidden">
         <button class="close-window">&times;</button>
         <h1 class="result">
-          Masha Allah Great👏 A Small Gift for you
+          Great👏 you got it right, A Small Gift for you
           <a href="img.png">Click here</a>
         </h1>
       </div>
